force-app/main/default/objects/HI_Commuter_Benefits__c/HI_Commuter_Benefits__c.object-meta.xml
<CustomObject>
    <label>HI Commuter Benefits</label>
    <nameField>
        <displayFormat>HCB-{0000000000}</displayFormat>
        <label>HI Commuter Benefits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HI Commuter Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>