force-app/main/default/objects/HI_Commuter_Benefits__c/fields/Provider_Key__c.field-meta.xml
<CustomField>
    <fullName>Provider_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>