force-app/main/default/objects/HI_Commuter_Benefits__c/fields/Waiting_Period__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waiting Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>